<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NLS UHF Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Common -->
    <string name="common_setting">Programming...</string>
    <string name="common_confirm">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_onning">Processing...</string>
    <string name="success">succeeded</string>
    <string name="failed">failed</string>
    <string name= "common_tip">Tip</string>
    <string name="common_no">No</string>
    
    <!-- 设置主界面 -->
    <string name="power_on">UHF Module On</string>
    <string name="power_oning">Powering on the module...</string>
    <string name="power_on_summary">Turn on &#038; initialize UHF module</string>
    <string name="inventory_demo">Inventory Demo</string>
    <string name="read_write_lock">Access Control</string>
    <string name="read_write_lock_summary">Control Read/Write, Lock and Kill operations</string>
    <string name="uhf_settings">UHF Settings</string>
    <string name="trigger_mode">Inventory Trigger</string>
    <string name="trigger_mode_main">SCAN key</string>
    <string name="trigger_mode_side">Left/Right SCAN key</string>
    <string name="trigger_mode_back">Trigger on pistol grip</string>
    <string name="scan_prompt">Inventory Notification</string>
    <string name="scan_prompt_sound">Sound</string>
    <string name="scan_prompt_vibrator">Vibration</string>
    <string name="scan_prompt_led">LED</string>
    

    <!-- 盘点测试 -->
    <string name="tab2_layout_textView1">Tag Count in Current Round:</string>
    <string name="tab2_layout_textView2">   Tag Count in All Rounds:</string>
    <string name="press_again_to_exit"> Press it again to exit</string>
    <string-array name="inventory_table_header">
        <item>No.</item>
        <item>EPC ID</item>
        <item>Read Count</item>
        <item>Antenna</item>
        <item>Protocol</item>
        <item>RSSI</item>
        <item>Frequency</item>
        <item>Custom Data</item>
    </string-array>
    <string name= "inventory_count">Inventory Count</string>
	<string name="inventory_period">Time of inventory : </string>

	<string name="restore_default">Restore to default</string>
	<string name="restore_default_promt">Comfirm to restore :\n<ul><li>"\tCommon settings"</li>\n<li>"\tUHF settings"</li></ul>\n\nto default?</string>
	
	<string name="power_off_prompt">Do power off ?</string>
	<string name="do_power_down">Power off</string>
	
	<string name="loading_uhf_module">Loading module...</string>
	<string name="uhf_module_unavailable">UHF device not detected, verify that UHF module exists and install correctly.</string>
	<string name="common_exit">Exit</string>
	<string name="search_again">Reload</string>
</resources>